syntax = "proto3";

package screencontrol;

import "google/protobuf/timestamp.proto";

// ─── Envelope ────────────────────────────────────────────────

// Every message over the wire is wrapped in an Envelope.
message Envelope {
    string id = 1;           // unique message ID (UUIDv4)
    string session_id = 2;   // session context (empty for registration)
    google.protobuf.Timestamp timestamp = 3;

    oneof payload {
        // Agent ↔ Server
        AgentRegistration   agent_registration    = 10;
        AgentRegistrationAck agent_registration_ack = 11;
        Heartbeat           heartbeat             = 12;
        HeartbeatAck        heartbeat_ack         = 13;
        AgentInfo           agent_info            = 14;

        // Session signaling
        SessionRequest      session_request       = 20;
        SessionOffer        session_offer         = 21;
        SessionAnswer       session_answer        = 22;
        IceCandidate        ice_candidate         = 23;
        SessionEnd          session_end           = 24;
        ConsentRequest      consent_request       = 25;
        ConsentResponse     consent_response      = 26;

        // Remote terminal
        TerminalData        terminal_data         = 30;
        TerminalResize      terminal_resize       = 31;

        // Remote desktop
        InputEvent          input_event           = 40;
        ScreenInfo          screen_info           = 41;
        ClipboardData       clipboard_data        = 42;
        MonitorSwitch       monitor_switch        = 43;
        QualitySettings     quality_settings      = 44;
        Ping                ping                  = 45;
        Pong                pong                  = 46;

        // File transfer
        FileTransferRequest file_transfer_request = 50;
        FileTransferAck     file_transfer_ack     = 51;
        FileChunk           file_chunk            = 52;
        FileList            file_list             = 53;
        FileListRequest     file_list_request     = 54;

        // Chat
        ChatMessage         chat_message          = 60;

        // Command execution
        CommandRequest      command_request       = 70;
        CommandResponse     command_response      = 71;

        // Desktop streaming
        DesktopFrame        desktop_frame         = 80;
        CursorData          cursor_data           = 81;
        CursorPosition      cursor_position       = 82;
        AudioFrame          audio_frame           = 83;

        // Host commands (session control)
        HostCommand         host_command          = 90;

        // Error
        ErrorMessage        error_message         = 99;
    }
}

// ─── Agent Registration ──────────────────────────────────────

message AgentRegistration {
    string agent_id = 1;       // persistent agent UUID (generated on first run)
    string machine_name = 2;
    string os = 3;             // "windows", "macos", "linux"
    string os_version = 4;
    string arch = 5;           // "x86_64", "aarch64"
    string agent_version = 6;
    string tenant_token = 7;   // tenant enrollment token
    string group_name = 8;     // optional: group to auto-assign on registration
    string instance_id = 9;    // server instance UUID for binding
}

message AgentRegistrationAck {
    bool   success = 1;
    string message = 2;
    string assigned_id = 3;    // server-assigned ID (may differ from agent_id)
}

// ─── Heartbeat ───────────────────────────────────────────────

message Heartbeat {
    string agent_id = 1;
    double cpu_usage = 2;
    uint64 memory_used = 3;
    uint64 memory_total = 4;
    uint64 disk_used = 5;
    uint64 disk_total = 6;
    uint32 uptime_secs = 7;
    string ip_address = 8;     // primary network address
}

message HeartbeatAck {
    uint32 interval_secs = 1;  // server tells agent next heartbeat interval
    string thumbnail_upload_url = 2;  // pre-signed PUT URL for desktop thumbnail
    bool   update_available = 3;      // server detected a newer agent version
    string update_version = 4;        // target version, e.g. "0.2.0"
    string update_download_url = 5;   // relative download path for the binary
    string update_sha256 = 6;         // SHA-256 checksum for verification
}

// ─── Agent Info ──────────────────────────────────────────────

message AgentInfo {
    string agent_id = 1;
    string machine_name = 2;
    string os = 3;
    string os_version = 4;
    string arch = 5;
    string agent_version = 6;
    repeated MonitorInfo monitors = 7;
    repeated NetworkInterface network_interfaces = 8;
    string logged_in_user = 9;
    string domain = 10;
    string cpu_model = 11;
}

message MonitorInfo {
    uint32 index = 1;
    string name = 2;
    uint32 width = 3;
    uint32 height = 4;
    bool   primary = 5;
    int32  x = 6;
    int32  y = 7;
    float  scale_factor = 8;
}

message NetworkInterface {
    string name = 1;
    string mac_address = 2;
    repeated string ip_addresses = 3;
}

// ─── Session Signaling ───────────────────────────────────────

enum SessionType {
    SESSION_TYPE_UNSPECIFIED = 0;
    SESSION_TYPE_DESKTOP = 1;
    SESSION_TYPE_TERMINAL = 2;
    SESSION_TYPE_FILE_TRANSFER = 3;
    SESSION_TYPE_CHAT = 4;
}

message SessionRequest {
    string agent_id = 1;
    string user_id = 2;
    SessionType session_type = 3;
    uint32 monitor_index = 4;  // for desktop sessions
}

message SessionOffer {
    string sdp = 1;            // WebRTC SDP offer
    SessionType session_type = 2;
}

message SessionAnswer {
    string sdp = 1;            // WebRTC SDP answer
}

message IceCandidate {
    string candidate = 1;
    string sdp_mid = 2;
    uint32 sdp_mline_index = 3;
}

message SessionEnd {
    string reason = 1;
}

// Consent flow for unattended access control.
// Server sends ConsentRequest to agent when a desktop session is requested.
// Agent shows a native dialog and replies with ConsentResponse.
message ConsentRequest {
    string user_id = 1;        // who is requesting access
    string user_name = 2;      // display name of requesting user
    SessionType session_type = 3;
    uint32 timeout_secs = 4;   // auto-deny after this many seconds (default 30)
}

message ConsentResponse {
    bool   granted = 1;
    string reason = 2;         // e.g. "User denied access" or "Timed out"
}

// ─── Remote Terminal ─────────────────────────────────────────

message TerminalData {
    bytes data = 1;            // raw terminal I/O bytes
}

message TerminalResize {
    uint32 cols = 1;
    uint32 rows = 2;
}

// ─── Remote Desktop Input ────────────────────────────────────

message InputEvent {
    oneof event {
        MouseMove    mouse_move = 1;
        MouseButton  mouse_button = 2;
        MouseScroll  mouse_scroll = 3;
        KeyEvent     key_event = 4;
        RelativeMouseMove relative_mouse_move = 5;
    }
}

message MouseMove {
    double x = 1;              // normalized 0.0 - 1.0
    double y = 2;
}

message MouseButton {
    uint32 button = 1;         // 0=left, 1=middle, 2=right
    bool   pressed = 2;
    double x = 3;
    double y = 4;
}

message MouseScroll {
    double delta_x = 1;
    double delta_y = 2;
    double x = 3;
    double y = 4;
}

message RelativeMouseMove {
    int32 dx = 1;              // pixel delta X
    int32 dy = 2;              // pixel delta Y
}

message KeyEvent {
    uint32 key_code = 1;       // platform-independent key code
    bool   pressed = 2;
    bool   ctrl = 3;
    bool   alt = 4;
    bool   shift = 5;
    bool   meta = 6;
}

// ─── Screen Info ─────────────────────────────────────────────

message ScreenInfo {
    repeated MonitorInfo monitors = 1;
    uint32 active_monitor = 2;
}

enum FrameCodec {
    FRAME_CODEC_JPEG = 0;      // JPEG-encoded frame (default, backward-compatible)
    FRAME_CODEC_H264 = 1;      // H264 Annex B NAL unit(s)
}

message DesktopFrame {
    uint32 width = 1;
    uint32 height = 2;
    bytes  data = 3;           // encoded frame data (JPEG or H264)
    uint32 sequence = 4;       // monotonic frame counter
    uint32 quality = 5;        // JPEG quality used (1-100), or H264 CRF
    FrameCodec codec = 6;      // encoding format
    bool   is_keyframe = 7;    // true for JPEG frames and H264 IDR frames
}

// ─── Cursor Data ─────────────────────────────────────────────

// Cursor shape — sent when cursor appearance changes.
// Viewer caches shapes by cursor_id; agent only sends full pixel data
// on first appearance (or when shape changes).
message CursorData {
    uint64 cursor_id = 1;      // platform cursor handle (stable across frames)
    uint32 width = 2;          // cursor image width in pixels
    uint32 height = 3;         // cursor image height in pixels
    uint32 hotspot_x = 4;      // click-point X offset from top-left
    uint32 hotspot_y = 5;      // click-point Y offset from top-left
    bytes  data = 6;           // RGBA pixel data (width * height * 4 bytes)
}

// Cursor position — sent alongside each DesktopFrame.
// References a previously-sent CursorData.
message CursorPosition {
    double x = 1;              // normalized 0.0-1.0 relative to captured monitor
    double y = 2;
    uint64 cursor_id = 3;      // references CursorData shape
    bool   visible = 4;        // false when cursor is hidden or off-screen
}

// ─── Audio ───────────────────────────────────────────────────

message AudioFrame {
    bytes  data = 1;           // Opus-encoded audio data
    uint32 sample_rate = 2;    // sample rate in Hz (e.g. 48000)
    uint32 channels = 3;       // number of channels (1=mono, 2=stereo)
    uint32 sequence = 4;       // monotonic frame counter
}

// ─── Clipboard ───────────────────────────────────────────────

message ClipboardData {
    string text = 1;           // UTF-8 clipboard text
    string mime_type = 2;      // e.g. "text/plain"
}

// ─── Monitor Switching ───────────────────────────────────────

message MonitorSwitch {
    uint32 monitor_index = 1;  // Index of the monitor to switch to
}

// ─── Adaptive Quality ────────────────────────────────────────

message QualitySettings {
    uint32 quality = 1;        // JPEG quality 1-100, or 0 for auto
    uint32 max_fps = 2;        // Target max FPS (0 = default 30)
    uint32 bitrate_kbps = 3;   // H264 bitrate in kbps (0 = default 4000)
}

// ─── Latency Measurement ─────────────────────────────────────

message Ping {
    uint64 timestamp = 1;      // Client-side timestamp (ms since epoch)
}

message Pong {
    uint64 timestamp = 1;      // Echo of the Ping timestamp
}

// ─── File Transfer ───────────────────────────────────────────

message FileTransferRequest {
    string file_name = 1;
    string file_path = 2;      // remote path
    uint64 file_size = 3;
    bool   upload = 4;         // true = console→agent, false = agent→console
    string transfer_id = 5;
}

message FileTransferAck {
    string transfer_id = 1;
    bool   accepted = 2;
    string presigned_url = 3;  // S3 presigned URL for upload/download
    string message = 4;
}

message FileChunk {
    string transfer_id = 1;
    uint64 offset = 2;
    bytes  data = 3;
    bool   final_chunk = 4;
}

message FileListRequest {
    string path = 1;           // directory to list
}

message FileList {
    string path = 1;
    repeated FileEntry entries = 2;
}

message FileEntry {
    string name = 1;
    bool   is_directory = 2;
    uint64 size = 3;
    google.protobuf.Timestamp modified = 4;
    string permissions = 5;
}

// ─── Chat ────────────────────────────────────────────────────

message ChatMessage {
    string sender_id = 1;
    string sender_name = 2;
    string content = 3;
    string timestamp = 4;  // ISO 8601
}

// ─── Command Execution ──────────────────────────────────────

message CommandRequest {
    string command = 1;
    repeated string args = 2;
    string working_dir = 3;
    uint32 timeout_secs = 4;
}

message CommandResponse {
    int32  exit_code = 1;
    string stdout = 2;
    string stderr = 3;
    bool   timed_out = 4;
}

// ─── Host Commands (session control) ────────────────────────

enum HostCommandType {
    HOST_COMMAND_UNSPECIFIED = 0;
    HOST_COMMAND_BLOCK_INPUT = 1;     // Block guest mouse/keyboard
    HOST_COMMAND_BLANK_SCREEN = 2;    // Blank guest monitor(s)
    HOST_COMMAND_WAKE_LOCK = 3;       // Prevent sleep/screen lock
    HOST_COMMAND_REBOOT_NORMAL = 4;   // Reboot to normal mode
    HOST_COMMAND_REBOOT_SAFE = 5;     // Reboot to safe mode + networking
}

message HostCommand {
    HostCommandType command = 1;
    bool enable = 2;                  // toggle on/off for stateful commands
}

// ─── Error ───────────────────────────────────────────────────

message ErrorMessage {
    uint32 code = 1;
    string message = 2;
    string details = 3;
}
